--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,7 +46,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:text">@string/button2</item>
+        <item name="android:text">@string/button4</item>
         <item name="android:textColor" >@color/white</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal|bold</item>
@@ -58,6 +58,8 @@
 
     <style name="recipesTextView">
         <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
 </resources>
