--- a/app/src/main/res/layout/resultados.xml
+++ b/app/src/main/res/layout/resultados.xml
@@ -20,27 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView61"
-                style="@style/recipesTextView"
-                android:layout_width="164dp"
-                android:layout_height="92dp"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textView62"
-                style="@style/recipesTextView"
-                android:layout_width="165dp"
-                android:layout_height="112dp"
-                android:layout_weight="1"
-                android:text="TextView" />
-
-        </LinearLayout>
+            android:orientation="vertical"/>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
