--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -35,8 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="63dp"
                 android:background="@android:color/holo_blue_dark"
-                android:onClick="irInicio"
-                android:text="EMPEZAR TEST" />
+                android:text="INICIAR" />
 
         </LinearLayout>
     </ScrollView>
