--- a/app/src/main/res/layout/scrollview.xml
+++ b/app/src/main/res/layout/scrollview.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_1"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_2"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -143,7 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_3"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -194,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_4"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -242,7 +242,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_5"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -290,7 +290,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_6"
-                android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -339,7 +338,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_7"
-                android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -389,7 +387,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_8"
-                android:textAlignment="center"
                 android:textColor="@android:color/black" />
 
             <LinearLayout
@@ -436,7 +433,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_9"
-                android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
