--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,7 +59,7 @@
     <style name="recipesTextView">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:textAlignment">textStart</item>
     </style>
 
 </resources>
