--- a/app/src/main/res/layout/resultados.xml
+++ b/app/src/main/res/layout/resultados.xml
@@ -7,16 +7,15 @@
 
     <!-- resultados.xml -->
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <TextView
+            android:id="@+id/resultadosint"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
+            android:layout_height="wrap_content"
+            android:text="TextView" />
     </LinearLayout>
 
 
