--- a/app/src/main/res/layout/scrollview.xml
+++ b/app/src/main/res/layout/scrollview.xml
@@ -48,7 +48,8 @@
                     style="@style/recipesButton1"
                     android:layout_width="match_parent"
                     android:layout_height="103dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:tag="0" />
 
                 <Button
                     android:id="@+id/button2"
@@ -58,6 +59,7 @@
                     android:layout_weight="1"
                     android:background="@color/naranja"
                     android:fontFamily="sans-serif"
+                    android:tag="1"
                     android:text="@string/button2"
                     android:textColor="@android:color/white"
                     android:textSize="12sp"
