--- a/app/src/main/res/layout/resultados.xml
+++ b/app/src/main/res/layout/resultados.xml
@@ -206,6 +206,47 @@
                     app:srcCompat="@mipmap/ic_info_foreground" />
             </LinearLayout>
 
+            <Button
+                android:id="@+id/repetirTest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="@android:color/holo_blue_light"
+                android:text="Repetir Test" />
+
+            <Button
+                android:id="@+id/volverInicio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/holo_blue_light"
+                android:text="Volver al inicio" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="151dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:srcCompat="@mipmap/ic_info_foreground" />
+
+                <TextView
+                    android:id="@+id/textView73"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Pulsando sobre el símbolo de + información al lado de cada área, te lleva a una página web externa explicando cada una."
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp" />
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
